<resources>
    <string name="app_name">Oishi</string>

    <string name="find_id">아이디 찾기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="input_email">이메일 입력</string>
    <string name="input_id">아이디 입력</string>
    <string name="confirm_authentic">인증번호 확인</string>
    <string name="description">이메일을 확인하시고 인증번호를 입력하세요</string>
    <string name="confirm">확인</string>
    <string name="log_in">로그인</string>
    <string name="log_out">로그아웃</string>
    <string name="user_information">회원 정보</string>

    <string name="prefLoginState">loginstate</string>

    <string name="id_hint">아이디를 입력해 주세요</string>
    <string name="password_hint">비밀번호를 입력해 주세요</string>
    <string name="register">회원가입</string>
    <string name="stay_logged_in">로그인 상태 유지</string>
    <string name="create_id_hint">아이디 입력(5~11자)</string>
    <string name="create_password_hint">비밀번호(숫자,영문,특수문자 조합 최소8자)</string>
    <string name="create_name_hint">이름</string>
    <string name="create_email_hint">이메일(example@example.com)</string>
    <string name="create_phone_hint">휴대전화(\'-\'없이입력해주세요)</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="register_button">가입하기</string>

    <string name="developerName1">유종원</string>
    <string name="developerName2">유강현</string>
    <string name="developerName3">주동철</string>
    <string name="developerEmail1">2e40camn@naver.com</string>
    <string name="developerEmail2">example@naver.com</string>
    <string name="developerEmail3">example@naver.com</string>
    <string name="developerMajor1">스마트정보통신공학과 16학번</string>
    <string name="developerMajor2">스마트정보통신공학과 16학번</string>
    <string name="developerMajor3">스마트정보통신공학과 16학번</string>
    <string name="date">2020년 5월 15일</string>
    <string name="member_information">회원정보</string>
    <string name="benefits_by_grade">등급별 혜택</string>
    <string name="point">포인트</string>
    <string name="coupon_box">쿠폰함</string>
    <string name="order_list">주문내역</string>
    <string name="review_management">리뷰관리</string>

    <string name="home">홈</string>
    <string name="my_user">My오이시</string>
    <string name="korean_food">한식</string>
    <string name="snack_food">분식</string>
    <string name="cafe">카페·디저트</string>
    <string name="chicken">치킨</string>
    <string name="pizza">피자</string>
    <string name="chinese_food">중국집</string>
    <string name="late_night_food">야식</string>
    <string name="lunchbox">도시락</string>
    <string name="fast_food">패스트푸드</string>
    <string name="brand">브랜드</string>
    <string name="menu">메뉴</string>

    <string name="favorite_store">찜한가게</string>
    <string name="user_address">현재 위치</string>
    <string name="search_content">먹고 싶은 메뉴, 가게 검색</string>
    <string name="immediate_payment">바로결제</string>
    <string name="phone_order">전화주문</string>

    <string name="appInformation">어플리케이션 정보</string>
    <string name="appVersion">어플리케이션 버전 : 0.1 Ver</string>
    <string name="developer">개발자 : Oishi(유종원, 유강현, 주동철)</string>
    <string name="homePage">홈페이지 = http://lionkiing33.cafe24.com</string>
    <string name="developerIntroduce">홈페이지 운영진 소개</string>
    <string name="map_content">현재 주소로 가져오기</string>
    <string name="map_content2">주소를 검색하세요!</string>
    <string name="search">검색</string>

    <string name="StringValue">이미지가 열리지 않습니다.</string>
    <string name="search_address">주소 검색</string>
    <string name="input_address">주소</string>
    <string name="input_detail_address">상세주소를 입력해주세요</string>

</resources>
