<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/powder_blue"
    tools:context=".map.Real_Write_Address">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="150dp"
            android:gravity="top|center"
            android:orientation="horizontal">
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/user_address"
                android:id="@+id/map_search_button"
                android:background="@color/powder_blue"
                android:layout_marginEnd="70dp" />

            <Button
                android:layout_marginTop="30dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/search_address"
                android:id="@+id/search_button"
                android:background="@color/powder_blue"/>
        </LinearLayout>
        <EditText
            android:layout_width="300sp"
            android:layout_height="40sp"
            android:ems="10"
            android:layout_gravity="center"
            android:hint="@string/input_address"
            android:layout_marginTop="50dp"
            android:background="@color/light_cyan"
            android:id="@+id/frame_address"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:layout_width="300sp"
            android:layout_height="40sp"
            android:ems="10"
            android:layout_gravity="center"
            android:hint="@string/input_detail_address"
            android:layout_marginTop="10dp"
            android:background="@color/light_cyan"
            android:id="@+id/detail_address"
            android:importantForAutofill="no"
            android:inputType="text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@color/powder_blue"
            android:id="@+id/next_page_button"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>