<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout_main2"
    tools:context=".map.Search">
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/map_content2"
        android:inputType="text"
        android:importantForAutofill="no" />
    <Button
        android:id="@+id/Yes_button2"
        android:text="@string/map_content"
        android:layout_marginTop="650dp"
        android:layout_width="400dp"
        android:layout_height="80dp"
        android:layout_gravity="center|top"
        />

    <Button
        android:id="@+id/button2"
        android:text="@string/search"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_gravity="end"/>

</FrameLayout>